--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -16,13 +16,17 @@
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
 
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
-    introTitle1: `UX`,
-    divider1: true, 
-    introTitle2: `Design`,
-    divider2: true, 
-    introTitle3: `Architecture`,
-    divider3: true, 
-    introTitle4: `Art`
+    ShowIntroTitle1:true,
+    ShowIntroTitle2:false,
+    ShowIntroTitle3:false,
+    ShowIntroTitle4:false,
+    introTitle1: `Streamlining UX for Enhanced Business Impact: Simplifying Complex Interfaces for Optimal User Engagement`,
+    divider1: false, 
+    introTitle2: ``,
+    divider2: false, 
+    introTitle3: ``,
+    divider3: false, 
+    introTitle4: ``
   }) %>
   <div class="wrapper">
     <div class="Grid Grid--full Grid--gutters">
