--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -14,16 +14,20 @@
   <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
-    introTitle1: `Architecture`,
+    ShowIntroTitle1:true,
+    ShowIntroTitle2:false,
+    ShowIntroTitle3:false,
+    ShowIntroTitle4:false,
+    introTitle1: `Crafting Spaces & Forms: Insights from My M.Arch at UC Berkeley`,
     divider1: true, 
-    introTitle2: `Academic projects`,
+    introTitle2: ``,
     divider2: false, 
     introTitle3: ``,
     divider3: false, 
     introTitle4: ``
   }) %>
   <%- include(`${templatePath}/shared/base_paragraph`,{
-    paragraphTxt:`Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are exemplified in the following projects. These projects placed great emphasis on the significant determinants of building form, encompassing format, spatial arrangement, materiality, tectonics, social considerations, technology, and environmental factors.`
+    paragraphTxt:`During my enriching three-year Master of Architecture (M.Arch) program at UC Berkeley, I engaged deeply with advanced design theories, methodologies, and hands-on practices. This portfolio highlights my exploration and mastery of architectural principles, reflecting a comprehensive approach to design. It includes projects that demonstrate my ability to blend form, spatial dynamics, materials, construction methods, social relevance, technology, and environmental sustainability, underscoring my academic journey at UC Berkeley.`
   }) %>
 
   <div class="blankHS"></div>
