--- a/templates/blog/index.ejs
+++ b/templates/blog/index.ejs
@@ -13,8 +13,12 @@
   <!--intro-->
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
-      introTitle1: `Welcome to the UX Odyssey`,
-      divider1: true, 
+      ShowIntroTitle1:true,
+      ShowIntroTitle2:false,
+      ShowIntroTitle3:false,
+      ShowIntroTitle4:false,
+      introTitle1: `Embarking on a UX Design Expedition with Vicky`,
+      divider1: false, 
       introTitle2: `Insights & Innovations`,
       divider2: ``, 
       introTitle3: ``,
@@ -23,16 +27,16 @@
     }) %>
 
   <%- include(`${templatePath}/shared/base_paragraph`,{
-    paragraphTxt:`Welcome to my digital corner, where the intricate world of User Experience design unfolds. I’m Vicky, a UX designer with a passion for transforming complex challenges into intuitive and impactful user experiences.`
+    paragraphTxt:`Welcome to my dedicated space for unraveling the complexities of User Experience (UX) design. I'm Vicky, a devoted UX designer committed to converting intricate challenges into seamless and significant user experiences.`
   }) %>
   <%- include(`${templatePath}/shared/base_paragraph`,{
-    paragraphTxt:`In this blog, we'll journey through the multifaceted landscape of UX design. From the depths of B2B SaaS solutions to the vibrant realm of consumer applications, every post is a new adventure. Whether you’re a fellow designer seeking inspiration, a business owner aiming to enhance your digital presence, or just someone curious about the art and science of UX design, you've landed in the right place.`
+    paragraphTxt:`This blog serves as a voyage across the diverse terrain of UX design, from the intricate solutions for B2B SaaS to the dynamic world of consumer apps. It's designed for anyone from designers looking for inspiration, business owners aiming to elevate their online interface, to curious minds fascinated by the fusion of UX art and science.`
   }) %>
   <%- include(`${templatePath}/shared/base_paragraph`,{
-    paragraphTxt:`Here, you'll find a rich collection of articles, case studies, and practical tips. I’ll share insights from my own experiences in simplifying intricate UX problems, delve into the latest trends, and explore the crossroads of creativity and usability. Expect to uncover the secrets behind effective user-centric designs, how to cater to diverse user needs, and much more.`
+    paragraphTxt:`Expect to discover a treasure trove of content here - from insightful articles and case studies to hands-on advice. I'm excited to share my journey in demystifying complex UX dilemmas, keeping pace with emerging trends, and investigating the synergy between creativity and functionality. You'll gain insights into crafting user-centered designs, meeting varied user expectations, and much more.`
   }) %>
   <%- include(`${templatePath}/shared/base_paragraph`,{
-    paragraphTxt:`So, buckle up and join me on this exhilarating journey to explore, learn, and grow in the ever-evolving world of UX design. Let's make the digital space more accessible, engaging, and delightful, one design at a time.`
+    paragraphTxt:`Gear up for an inspiring exploration as we delve into, learn, and advance within the ever-changing domain of UX design. Together, let's enhance the digital landscape to be more inclusive, captivating, and pleasant, one design at a time.`
   }) %>
 
   <!--intro-->
