--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -14,16 +14,22 @@
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
 
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
-    introTitle1: `Nature`,
-    divider1: true, 
-    introTitle2: `wildlife`,
+    ShowIntroTitle1:true,
+    ShowIntroTitle2:false,
+    ShowIntroTitle3:false,
+    ShowIntroTitle4:false,
+    introTitle1: `Capturing the Essence of the Natural World: A Photographic Journey
+
+`,
+    divider1: false, 
+    introTitle2: ``,
     divider2: false, 
     introTitle3: ``,
     divider3: false, 
     introTitle4: ``
   }) %>
   <%- include(`${templatePath}/shared/base_paragraph`,{
-    paragraphTxt:`Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent beauty of natural elements in my photography. Whether it's a sweeping landscape or a tiny detail, I strive to recompose nature in a way that showcases its stunning aspects. I am passionate about observing the intricate details of natural components and crafting their stories through my art, sharing the wonders of the natural world with others.`
+    paragraphTxt:`My photography is a celebration of nature's complexity and splendor, viewed through my unique lens and perspective. It's an artistic endeavor to capture and share the intricate stories and stunning beauty found in natural elements. From vast landscapes to the minutest details, my goal is to present nature in its most breathtaking light. This passion for observation and storytelling drives me to explore the natural world, bringing its wonders closer to others through my photographic art.`
   }) %>
 
 
