--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -39,7 +39,8 @@
       <img src="<%- bannerMockupL %>" alt="Mockup">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
-        <h2><strong><%= bannerTitle %></strong> </h2>
+
+        <h2 class="ProjectBannerInnerElement"><strong><%= bannerTitle %></strong> </h2>
         <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
 
         <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="button-35 <%= bannerButtonColor %>">Slide Decks</button></a>
