--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -14,9 +14,14 @@
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hello, I'm Vicky.
   `}) %>
     <%- include(`${templatePath}/shared/comp_titleWeb`,{
-      introTitle1: `UX designer`,
-      divider1: true, 
-      introTitle2: `Product designer`,
+      ShowIntroTitle1:true,
+      ShowIntroTitle2:false,
+      ShowIntroTitle3:false,
+      ShowIntroTitle4:false,
+
+      introTitle1: `Versatile UX Innovator: Bridging Efficiency and Engagement in SaaS, Administrative Interfaces, and User-Driven Applications`,
+      divider1: false, 
+      introTitle2: ``,
       divider2: false, 
       introTitle3: ``,
       divider3: false, 
