error message fix
 "Password is incorrect"

--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Professional Background and Interests - Vicky Wang', 
-  description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang', 
+  description:'Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.', 
   pageURL:'about', thumbnailImgURL: 'vickywang_web.png'
   }) %>
 <!--Head-->
