--- a/templates/shared/block_cardnPassword.ejs
+++ b/templates/shared/block_cardnPassword.ejs
@@ -26,7 +26,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong><%= cardPwTitle %>
+              <h3 class="arrCard"><strong><%= cardPwTitle %>
                 </strong></h3>
               <h4><%= cardPwDescription %>
               </h4>
