--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -39,14 +39,6 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
-        cardPwID:`onboardingSubscription`,
-        hoverBorderColor:`BYP`,
-        inputColor:`PWinput`,
-        cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B.png`,
-        cardPwTitle: `Streamlined Onboarding & Engagement: Mastering B2B SaaS Subscription Success`, 
-        cardPwDescription:`Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.` 
-        }) %>
-      <%- include(`${templatePath}/shared/block_cardnPassword`, {
         cardPwID:`consumerBooking`,
         hoverBorderColor:`BYP`,
         inputColor:`PWinput`,
@@ -54,8 +46,25 @@
         cardPwTitle: `Consumer Booking Experience: A Journey to Enhanced Engagement and Conversion`, 
         cardPwDescription:`Improving the consumer booking flow within a dynamic service platform. Our mission was to identify and alleviate pain points in the existing booking process, with a goal to substantially elevate user engagement and increase conversion rates.` 
         }) %>
+      <%- include(`${templatePath}/shared/block_cardnPassword`, {
+        cardPwID:`onboardingSubscription`,
+        hoverBorderColor:`BYP`,
+        inputColor:`PWinput`,
+        cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B.png`,
+        cardPwTitle: `Streamlined Onboarding & Engagement: Mastering B2B SaaS Subscription Success`, 
+        cardPwDescription:`Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.` 
+        }) %>
+
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
+      <%- include(`${templatePath}/shared/block_cardnPassword`, {
+        cardPwID:`rxZero`,
+        hoverBorderColor:`BYP`,
+        inputColor:`PWinput`,
+        cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B_Redesign.png`,
+        cardPwTitle: `BookYourPet Redefined: Powering Up the Pet Service Booking Revolution`, 
+        cardPwDescription:`Revolutionized BookYourPet with a strategic platform redesign, elevating user engagement and streamlining operations. Our focused overhaul on essential features led to a 45% surge in user satisfaction, reshaping pet care services. Discover our journey towards a seamless pet service experience.` 
+        }) %>
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
         cardPwID:`adminPanel`,
         hoverBorderColor:`LASO`,
@@ -64,6 +73,9 @@
         cardPwTitle: `LASO Admin Panel: From Concept to Reality - Simplified User Management`, 
         cardPwDescription:`The core focus of this panel was to efficiently manage a diverse range of user accounts, including B2B, D2C, and guest users. A unique aspect of this project was accommodating users from B2B with company sponsorship, adding another layer of complexity to the design process.` 
         }) %>
+
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2">
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
         cardPwID:`rxZero`,
         hoverBorderColor:`LASO`,
@@ -72,8 +84,6 @@
         cardPwTitle: `Shifting Focus: The Evolution of LASO to RX Zero`, 
         cardPwDescription:`This case study delves into LASO Health's strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.` 
         }) %>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
         cardPwID:`costCalculator`,
         hoverBorderColor:`LASO`,
@@ -82,6 +92,12 @@
         cardPwTitle: `RX Zero Savings Explorer - Cost-benefit Calculator`, 
         cardPwDescription:`This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.` 
         }) %>
+
+    </div>
+    <div class="Grid Grid--gutters Grid--full">
+
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3">
       <%- include(`${templatePath}/shared/block_cardNoPassword`, {
         hoverBorderColor:`GLORIFY`,
         cardNoPwURL:`${websitePath}/glorify/`,
@@ -89,8 +105,6 @@
         cardNoPwTitle: `Glorify: Transforming Solitary Devotion into Community Engagement`, 
         cardNoPwDescription:`This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.` 
         }) %>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
       <%- include(`${templatePath}/shared/block_cardNoPassword`, {
         hoverBorderColor:`SEER`,
         cardNoPwURL:`${websitePath}/seer/`,
