Card - Equal Height Columns

--- a/templates/blog/index.ejs
+++ b/templates/blog/index.ejs
@@ -26,16 +26,16 @@
       introTitle4: ``
     }) %>
 
-  <%- include(`${templatePath}/shared/base_paragraph`,{
+  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
     paragraphTxt:`Welcome to my dedicated space for unraveling the complexities of User Experience (UX) design. I'm Vicky, a devoted UX designer committed to converting intricate challenges into seamless and significant user experiences.`
   }) %>
-  <%- include(`${templatePath}/shared/base_paragraph`,{
+  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
     paragraphTxt:`This blog serves as a voyage across the diverse terrain of UX design, from the intricate solutions for B2B SaaS to the dynamic world of consumer apps. It's designed for anyone from designers looking for inspiration, business owners aiming to elevate their online interface, to curious minds fascinated by the fusion of UX art and science.`
   }) %>
-  <%- include(`${templatePath}/shared/base_paragraph`,{
+  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
     paragraphTxt:`Expect to discover a treasure trove of content here - from insightful articles and case studies to hands-on advice. I'm excited to share my journey in demystifying complex UX dilemmas, keeping pace with emerging trends, and investigating the synergy between creativity and functionality. You'll gain insights into crafting user-centered designs, meeting varied user expectations, and much more.`
   }) %>
-  <%- include(`${templatePath}/shared/base_paragraph`,{
+  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
     paragraphTxt:`Gear up for an inspiring exploration as we delve into, learn, and advance within the ever-changing domain of UX design. Together, let's enhance the digital landscape to be more inclusive, captivating, and pleasant, one design at a time.`
   }) %>
 
