--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -27,7 +27,7 @@
       divider3: false, 
       introTitle4: ``
     }) %>
-  <%- include(`${templatePath}/shared/base_paragraph`,{
+  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
     paragraphTxt:`I am based in San Francisco and am deeply committed to developing web solutions for both businesses and consumers. My approach hinges on dissecting complex challenges and transforming them into clear, efficient, and impactful digital experiences.`
   }) %>
 
