--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -28,7 +28,7 @@
     divider3: false, 
     introTitle4: ``
   }) %>
-  <%- include(`${templatePath}/shared/base_paragraph`,{
+  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
     paragraphTxt:`My photography is a celebration of nature's complexity and splendor, viewed through my unique lens and perspective. It's an artistic endeavor to capture and share the intricate stories and stunning beauty found in natural elements. From vast landscapes to the minutest details, my goal is to present nature in its most breathtaking light. This passion for observation and storytelling drives me to explore the natural world, bringing its wonders closer to others through my photographic art.`
   }) %>
 
