--- a/templates/shared/block_cardNoPassword.ejs
+++ b/templates/shared/block_cardNoPassword.ejs
@@ -1,18 +1,11 @@
-<div class="Grid-cell">
+<div class="Grid-cell shadowBoxLt float cardBorder borderRadiusS cardBottomBorder <%= hoverBorderColor %> paddingNone marginXS">
+  <img src="<%= cardNoPwImgURL%>" alt="<%= cardNoPwTitle %>">
+
   <div class="element">
     <a class="no-hover-effect" href="<%= cardNoPwURL%>">
-      <div class="">
-        <div class="cardBottomBorder <%= hoverBorderColor %> float cardBorder borderRadiusS shadowBoxLt">
-          <img src="<%= cardNoPwImgURL%>" alt="<%= cardNoPwTitle %>">
-          <div class="element">
-            <div class="element">
-              <h3 class="arrCard"><strong><%= cardNoPwTitle %></strong></h3>
-              <h4><%= cardNoPwDescription %>
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h3 class="arrCard" data-aos="fade-up"><strong><%= cardNoPwTitle %></strong></h3>
+      <h4><%= cardNoPwDescription %>
+      </h4>
     </a>
   </div>
 </div>
