--- a/templates/shared/block_cardnPassword.ejs
+++ b/templates/shared/block_cardnPassword.ejs
@@ -1,7 +1,6 @@
-<div class="Grid-cell">
-  <div class="element">
+<div class="Grid-cell cardBottomBorder <%= hoverBorderColor %> float cardBorder borderRadiusS shadowBoxLt paddingNone marginXS">
     <a class="no-hover-effect">
-      <div class="cardBottomBorder <%= hoverBorderColor %> float cardBorder borderRadiusS shadowBoxLt">
+      <div class="">
         <div class="img__wrap">
           <img class="img__img" alt="Work Samples" src="<%= cardPwImgURL %>" />
           <div class="img__description">
@@ -35,5 +34,4 @@
         </div>
       </div>
     </a>
-  </div>
 </div>
