--- a/html/main.css
+++ b/html/main.css
@@ -2042,7 +2042,9 @@ hr {
 }
 
 
-
+.cardHeightMax{
+    align-items: stretch;
+}
 
 
 /* cardBottomBorder = bottom border */
@@ -2065,6 +2067,8 @@ hr {
     border-bottom: 5px solid transparent !important;
     /* Make the border transparent */
     transition: all 0.25s ease-in;
+
+
 }
 
 .cardBottomBorder:hover {
@@ -2138,7 +2142,9 @@ hr {
 /* ---- must always have for responsive*/
 .element {
     padding: 0.4em 0.8em 0;
+    
     /* ----     0.8em 1em 0 0;  top, right, bottom, left;
+   ;
 
 
 padding: 0.8em 0em 0;
@@ -2975,13 +2981,6 @@ flex: 0 0 calc(33.3333% - 1em);
 @media (min-width: 30em) {
     body .Grid--full>.Grid-cell {
         flex: 0 0 96%;
-    }
-
-    .forFullResponsiveGrid {
-        padding-left: 0.8em;
-
-        /*     margin: 0 -0.4em 0 0.8em;
- + */
     }
 
     .Grid--cols-4>.Grid-cell {
