--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -26,7 +26,7 @@
     divider3: false, 
     introTitle4: ``
   }) %>
-  <%- include(`${templatePath}/shared/base_paragraph`,{
+  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
     paragraphTxt:`During my enriching three-year Master of Architecture (M.Arch) program at UC Berkeley, I engaged deeply with advanced design theories, methodologies, and hands-on practices. This portfolio highlights my exploration and mastery of architectural principles, reflecting a comprehensive approach to design. It includes projects that demonstrate my ability to blend form, spatial dynamics, materials, construction methods, social relevance, technology, and environmental sustainability, underscoring my academic journey at UC Berkeley.`
   }) %>
 
