--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'UX Designer Specializing in SaaS and Consumer Mobile Applications - Vicky Wang', 
   description:'Vicky Wang, a seasoned UX designer, excels in creating intuitive solutions for B2B SaaS platforms and consumer applications, simplifying complex user experiences for enhanced business outcomes.', 
