--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {
-  SEO:true, 
+<%- include(`${templatePath}/shared/head`, {SEO:true, 
   Title:'Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study', 
   description:`Discover Vicky Wang's innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.`, 
   pageURL:'appointa', 
