--- a/templates/architecture/LACAMA/index.ejs
+++ b/templates/architecture/LACAMA/index.ejs
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <%- include(`${templatePath}/shared/head`, {SEO:true, Title:' A Fusion of Culture and Modern Architecture by Vicky Wang', 
   description:`'an architectural endeavor that harmoniously blends cultural elements with contemporary design. This project stands as a testament to the integration of traditional motifs and modern architectural principles, creating a space that is both culturally rich and aesthetically modern.`, 
   pageURL:'architecture/LACAMA', thumbnailImgURL: 'vickywang_web.png'
