--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -19,7 +19,7 @@
     ShowIntroTitle3:false,
     ShowIntroTitle4:false,
     introTitle1: `Crafting Spaces & Forms: Insights from My M.Arch at UC Berkeley`,
-    divider1: true, 
+    divider1: false, 
     introTitle2: ``,
     divider2: false, 
     introTitle3: ``,
