--- a/templates/architecture/manifold_ground/index.ejs
+++ b/templates/architecture/manifold_ground/index.ejs
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Manifold Ground: Multidimensional Architectural Exploration by Vicky Wang', 
