--- a/templates/architecture/narrow_stripes/index.ejs
+++ b/templates/architecture/narrow_stripes/index.ejs
@@ -1,5 +1,5 @@
-<html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Narrow Stripes: Harmonizing Architecture with Landscape by Vicky Wang', 
       description:`'Narrow Stripes' integrates architecture and landscape, crafting a design that enables fluid interaction between interior and exterior spaces. This approach fosters connectivity among occupants and with the natural surroundings, creating an environment that encourages interaction and engagement with both the community and the natural world.`, 
