--- a/templates/architecture/recreation_commons/index.ejs
+++ b/templates/architecture/recreation_commons/index.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Fostering Community Through Architectural Design by Vicky Wang', 
   description:'This project aims to develop versatile recreational spaces that promote social interaction and community involvement, exemplifying the confluence of design and social dynamics.', 
