--- a/templates/architecture/the_rotation_of_curves/index.ejs
+++ b/templates/architecture/the_rotation_of_curves/index.ejs
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'The Rotation of Curves: Architectural Elegance in Fluid Design', 
   description:'This project explores the dynamic use of curved forms, rotating them to create spatial intrigue and structural sophistication. The design emphasizes seamless flow and continuity, challenging conventional architectural boundaries. Experience this innovative approach to design, where curves are not just aesthetic elements but integral to the functional and experiential aspects of the structure.', 
