--- a/templates/design_system/navigation/V2/index.ejs
+++ b/templates/design_system/navigation/V2/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Exploring Navigation V2 - Digital Interfaces & User Engagement by Vicky Wang', 
