--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang', 
   description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
@@ -33,7 +33,7 @@
 
   <%- include(`${templatePath}/shared/homePage_icons-buttons`) %>
   <!-- Arrow -->
-  <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Case Study' }) %>
+  <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'UX Case Study' }) %>
   <!-- Arrow -->
   <!-- Content -->
   <div class="wrapper">
@@ -54,11 +54,10 @@
         cardPwTitle: `Streamlined Onboarding & Engagement: Mastering B2B SaaS Subscription Success`, 
         cardPwDescription:`Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.` 
         }) %>
-
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
-        cardPwID:`rxZero`,
+        cardPwID:`b2bAppRedesign`,
         hoverBorderColor:`BYP`,
         inputColor:`PWinput`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B_Redesign.png`,
@@ -66,6 +65,7 @@
         cardPwDescription:`Revolutionized BookYourPet with a strategic platform redesign, elevating user engagement and streamlining operations. Our focused overhaul on essential features led to a 45% surge in user satisfaction, reshaping pet care services. Discover our journey towards a seamless pet service experience.` 
         }) %>
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
+
         cardPwID:`adminPanel`,
         hoverBorderColor:`LASO`,
         inputColor:`PWinputLH`,
@@ -77,6 +77,7 @@
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
+
         cardPwID:`rxZero`,
         hoverBorderColor:`LASO`,
         inputColor:`PWinputLH`,
@@ -85,6 +86,7 @@
         cardPwDescription:`This case study delves into LASO Health's strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.` 
         }) %>
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
+
         cardPwID:`costCalculator`,
         hoverBorderColor:`LASO`,
         inputColor:`PWinputLH`,
