--- a/templates/shared/block_cardnPassword.ejs
+++ b/templates/shared/block_cardnPassword.ejs
@@ -2,7 +2,7 @@
     <a class="no-hover-effect">
       <div class="">
         <div class="img__wrap">
-          <img class="img__img" alt="Work Samples" src="<%= cardPwImgURL %>" />
+          <img class="img__img" alt="<%= cardPwTitle %>" src="<%= cardPwImgURL %>" />
           <div class="img__description">
             <div class="input-field">
               <div class="column">
@@ -13,7 +13,7 @@
                 <div class="pwContainer">
                   <input class="<%= inputColor %> psJS" type="password" id="<%= cardPwID %>" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
-                    <img src="<%= websitePath %>/icon/arrow-forward.svg" alt="Enter">
+                    <img src="<%= websitePath %>/icon/arrow-forward.svg" width="908" height="504" alt="<%= cardPwTitle %>">
                   </button>
                 </div>
                 <div class="pwIncorrectHeight">
