--- a/templates/architecture/recovery_of_river_edges/index.ejs
+++ b/templates/architecture/recovery_of_river_edges/index.ejs
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Revitalizing River Edges: Sustainable Architectural Strategies by Vicky Wang', 
