--- a/templates/blog/index.ejs
+++ b/templates/blog/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Innovative UX Strategy & Web Development Insights - Blog by Vicky Wang', 
