--- a/templates/design_system/navigation/V1/index.ejs
+++ b/templates/design_system/navigation/V1/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Exploring Navigation Design V1 - Interface Design & User Experience by Vicky Wang', 
