--- a/templates/design_system/navigation/V3/index.ejs
+++ b/templates/design_system/navigation/V3/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Navigation V3 - Technological Solutions & User Interaction by Vicky Wang', 
