--- a/templates/design_system/navigation/index.ejs
+++ b/templates/design_system/navigation/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Navigation Solutions - User Interface & Digital Experience by Vicky Wang', 
