--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -12,7 +12,7 @@
   <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHM"></div>
-  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
+  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
     ShowIntroTitle1:true,
     ShowIntroTitle2:false,
