--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -11,25 +11,22 @@
   <%- include( `${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'PROJECT' }) %>
   <div class="blankHM"></div>
-  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hello, I'm Vicky.
-  `}) %>
-    <%- include(`${templatePath}/shared/comp_titleWeb`,{
-      ShowIntroTitle1:true,
-      ShowIntroTitle2:false,
-      ShowIntroTitle3:false,
-      ShowIntroTitle4:false,
+  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hello, I'm Vicky.`}) %>
+  <%- include(`${templatePath}/shared/comp_titleWeb`,{
+    ShowIntroTitle1:true,
+    ShowIntroTitle2:false,
+    ShowIntroTitle3:false,
+    ShowIntroTitle4:false,
 
-      introTitle1: `Versatile UX Innovator: Bridging Efficiency and Engagement in SaaS, Administrative Interfaces, and User-Driven Applications`,
-      divider1: false, 
-      introTitle2: ``,
-      divider2: false, 
-      introTitle3: ``,
-      divider3: false, 
-      introTitle4: ``
-    }) %>
-  <%- include(`${templatePath}/shared/base_textualElements_paragraph`,{
-    paragraphTxt:`I am based in San Francisco and am deeply committed to developing web solutions for both businesses and consumers. My approach hinges on dissecting complex challenges and transforming them into clear, efficient, and impactful digital experiences.`
+    introTitle1: `Versatile UX Innovator: Bridging Efficiency and Engagement in SaaS, Administrative Interfaces, and User-Driven Applications`,
+    divider1: false, 
+    introTitle2: ``,
+    divider2: false, 
+    introTitle3: ``,
+    divider3: false, 
+    introTitle4: ``
   }) %>
+
 
   <%- include(`${templatePath}/shared/homePage_icons-buttons`) %>
   <!-- Arrow -->
