--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -13,7 +13,7 @@
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ABOUT' }) %>
 
   <div class="blankHM"></div>
-  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
+  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
 
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
     ShowIntroTitle1:true,
