--- a/templates/blog/index.ejs
+++ b/templates/blog/index.ejs
@@ -12,7 +12,7 @@
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'BLOG' }) %>
   <div class="blankHM"></div>
   <!--intro-->
-  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
+  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
       ShowIntroTitle1:true,
       ShowIntroTitle2:false,
