--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -11,7 +11,7 @@
   <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'PHOTOGRAPHY' }) %>
   <div class="blankHM"></div>
-  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`hi there!`}) %>
+  <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
 
   <%- include(`${templatePath}/shared/comp_titleWeb`,{
     ShowIntroTitle1:true,
